# cpp_numpy

./: CMakeLists.txt  README.md  REANDME.md  test.cpp
array/: Basic_operations.cpp  CMakeLists.txt  Generate.cpp  Matrix_operations.cpp  Shape.cpp  a.out  array.cpp  array.h  array.out  ndarray.cpp  ndarray.out  test.cpp
